# factorio-server-aws

./: Cargo.toml  discord-cmd-def.json
src/: lib.rs  main.rs
src/aws_client/: cfn.rs  compute.rs  ddb.rs  mod.rs
src/discord/: auth.rs  mod.rs
src/model/: mod.rs
src/model/domain/: mod.rs
src/model/dynamo/: mod.rs
