[package]
name = "factorio-server-lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0.79"
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-sdk-autoscaling = "1.9.0"
aws-sdk-cloudformation = "1.10.0"
aws-sdk-ec2 = "1.12.0"
aws-sdk-ecs = "1.10.0"
ed25519-dalek = { version = "2.1.0" }
hex = "0.4.3"
lambda_http = { version = "0.8.3", default-features = false, features = ["apigw_http"] }
aws_lambda_events = { version = "0.12.0", default-features = false, features = ["cloudwatch_events"] }
lambda_runtime = "0.8.3"
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json"] }
aws-sdk-dynamodb = { version = "1.9.0"}
serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
time = "0.3.31"
serde = { version = "1.0.195", features = ["derive"] }  
reqwest = "0.11.23"
openssl = { version = "0.10.62", features = ["vendored"] }

[[bin]]
name = "factorio-server-lambda"
path = "src/bin/lambda/factorio-discord-cmd.rs"
test = false

[[bin]]
name = "factorio-update-complete-lambda"
path = "src/bin/lambda/factorio-update-complete.rs"
test = false

# [package.metadata.lambda.deploy]
# memory = 512                   # Function's memory
# timeout = 20                   # Function's execution timeout
# role = "arn:aws:iam::975049988208:role/factorio-lambda-role"         # Function's execution role
